Tests/CompilerTests/negative/missing-initializer.hylo
//! no-std

struct S { var m: Void }

public fun main() {
  let x: S
  let y = x.m
}
