Tests/CompilerTests/negative/missing-initializer.diagnostics.expected
negative/missing-initializer.hylo:6.11: error: binding declaration requires an initializer
  let x: S
          ^
